--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form type="post">
+	<label for="Name">Name*</label>
+	<input type="text" id="name" required placeholder="Name">
+	<label for="Email">Email*</label>
+	<input type="email" id="email" required placeholder="Email">
+	<label for="Gender">Gender*</label>
+	Male<input type="radio" name="gender" id="gender_m"required>
+	Female<input type="radio" name="gender" id="gender_f"required>
+	<label for="cars">Car Brands*</label>
+	<select id="cars" required >
+		<option disabled selected>--Please choose an option--</option>
+		<option value="bmw">BMW</option>
+		<option value="audi">Audi</option>
+		<option value="mercedez">Mercedez</option>
+	</select>
+	<label for="age">Age*</label>
+	<input type="number" id="age" required placeholder="Age">
+	<label for="dob">DOB*</label>
+	<input type="date" id="dob" required>
+	<label for="phnumber">Phone Number</label>
+	<input type="tel" id="tel"  placeholder="xxx-xxx-xxxx">
+	<label for="pasword">Password*</label>
+	<input type="password" id="password" required placeholder="Password">
+	<lable for="checkbox">Checkbox*</lable>
+	<input type="checkbox" required id="tos">
+	<label for="tos">I agree to the TOS</label>
+	<button type="submit">submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
