--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form type="post">
+	<form method="post">
 	<label for="Name">Name*</label>
 	<input type="text" id="name" required placeholder="Name">
 	<label for="Email">Email*</label>
