--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
 	<form method="post">
 		
 	<label for="name">Name*</label>
-	<input type="text" id="name" required placeholder="Name">
+	<input type="text" id="name" required placeholder="Name" name="name">
 		
 	<label for="email">Email*</label>
-	<input type="email" id="email" required placeholder="Email">
+	<input type="email" id="email" required placeholder="Email" name="email">
 		
 	<label for="gender">Gender*</label>
 	<input type="radio" name="gender" id="gender_m" required>
@@ -32,16 +32,16 @@
 	</select>
 		
 	<label for="age">Age*</label>
-	<input type="number" id="age" required placeholder="Age">
+	<input type="number" id="age" name="age"required placeholder="Age">
 		
 	<label for="dob">DOB*</label>
-	<input type="date" id="dob" required>
+	<input type="date" id="dob" name="dob" required>
 		
 	<label for="tel">Phone Number</label>
-	<input type="tel" id="tel"  placeholder="xxx-xxx-xxxx">
+	<input type="tel" id="tel"  name="tel" placeholder="xxx-xxx-xxxx">
 		
 	<label for="pasword">Password*</label>
-	<input type="password" id="password" required placeholder="Password">
+	<input type="password"  name="password"id="password" required placeholder="Password">
 		
 
 	<input type="checkbox" required id="tos">
