--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 	<input type="password"  name="password"id="password" required placeholder="Password">
 		
 
-	<input type="checkbox" required id="tos">
+	<input type="checkbox"name="tos" required id="tos">
 	<label for="tos">I agree to the TOS</label>
 		
 	<button type="submit">submit</button>
