--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 	<label for="tel">Phone Number</label>
 	<input type="tel" id="tel"  name="tel" placeholder="xxx-xxx-xxxx">
 		
-	<label for="pasword">Password*</label>
+	<label for="password">Password*</label>
 	<input type="password"  name="password"id="password" required placeholder="Password">
 		
 
